# kursovaya4

./: pyproject.toml
src/: classes.py  main.py  spisochek.json  user_vacancies.json  vacancies.json
