[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Aleksey-Markov <tte4enuxa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
